Add preview build to release pipeline
